--- a/anim.css
+++ b/anim.css
@@ -31,3 +31,20 @@
     transition: all .7s;
     top: -25px;
 }
+
+/*? Stars in out */
+.stars-in{
+    transition: all 1s;
+    transform: translateY(0px);
+}
+
+.stars-out{
+    transition: all 1s;
+    transform: translateY(-200px);
+}
+
+/*? sunmoon */
+
+.moon-color{
+    background-color: red;
+}
