--- a/style.css
+++ b/style.css
@@ -44,11 +44,6 @@ body{
     overflow: hidden;
 }
   
-/* 
-.toggle-switch input:checked + label {
-    background-color: #2196F3;
-}
-   */
 
 .toggle-switch label:after {
     content: "";
@@ -56,8 +51,9 @@ body{
     width: 160px;
     height: 160px;
     margin: 20px;
-    background-color: yellow;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;;
+    background-color: #EFCD55;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    box-shadow: inset 0 0 15px 3px white;
     border-radius: 50%;
     transition: all 1s;
 }
@@ -65,6 +61,7 @@ body{
 
 .toggle-switch input:checked + label:after {
     transform: translateX(400px);
+    background-color: #C8CCD2;
 }
   
 
@@ -98,6 +95,7 @@ label div {
 .stars{
     margin-left: 50px;
     margin-top: 20px;
+    transform: translateY(-200px);
 }
 
 /*! Circles */
@@ -107,7 +105,6 @@ label div {
 }
 
 .circles .circle2:nth-child(1){
-    background-color: #7BB4E9;
     height: 250px;
     width: 250px;
     border-radius: 50%;
@@ -116,7 +113,6 @@ label div {
 }
 
 .circles .circle2:nth-child(2){
-    background-color: #6EACE7;
     height: 450px;
     width: 450px;
     border-radius: 50%;
@@ -125,8 +121,8 @@ label div {
     z-index: -2;
 }
 
+
 .circles .circle2:nth-child(3){
-    background-color: #60A4E5;
     height: 650px;
     width: 650px;
     border-radius: 50%;
@@ -136,11 +132,42 @@ label div {
 }
 
 .circles .circle2:nth-child(4){
-    background-color: #5099E0;
     height: 1000px;
     width: 1000px;
     border-radius: 50%;
     top: -200px;
     left: -200px;
     z-index: -4;
+}
+
+.dayc1{
+    background-color: #7BB4E9;
+}
+
+.dayc2{
+    background-color: #6EACE7;
+}
+
+.dayc3{
+    background-color: #60A4E5;
+}
+
+.dayc4{
+    background-color: #5099E0;
+}
+
+.nightc1{
+    background-color: #575963;
+}
+
+.nightc2{
+    background-color: #464854;
+}
+
+.nightc3{
+    background-color: #343643;
+}
+
+.nightc4{
+    background-color: #202230;
 }
